--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -51,6 +51,7 @@ networking:
   OVN_LEADER_PROBE_INTERVAL: 5
   OVN_REMOTE_PROBE_INTERVAL: 10000
   OVN_REMOTE_OPENFLOW_INTERVAL: 180
+  OVN_NORTHD_N_THREADS: 1
 
 func:
   ENABLE_LB: true
