--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -38,7 +38,6 @@ jobs:
           # working-directory: somedir
 
           # Optional: golangci-lint command line arguments.
-          args: --timeout 20m
-
+          args: --timeout 20m --verbose
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
