--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -9,8 +9,8 @@ spec:
     singular: vpc-dns
     shortNames:
       - vpc-dns
-    kind: VpcDns
-    listKind: VpcDnsList
+    kind: VpcDNS
+    listKind: VpcDNSList
   scope: Cluster
   versions:
     - additionalPrinterColumns:
@@ -906,7 +906,7 @@ spec:
         name: V4ip
         type: string
       - jsonPath: .spec.internalIp
-        name: InternalIp
+        name: InternalIP
         type: string
       - jsonPath: .status.v6ip
         name: V6ip
@@ -995,7 +995,7 @@ spec:
         name: V6ip
         type: string
       - jsonPath: .spec.internalIp
-        name: InternalIp
+        name: InternalIP
         type: string
       - jsonPath: .spec.externalPort
         name: ExternalPort
@@ -1271,10 +1271,10 @@ spec:
         name: Ready
         type: boolean
       - jsonPath: .spec.ipType
-        name: IpType
+        name: IPType
         type: string
       - jsonPath: .spec.ipName
-        name: IpName
+        name: IPName
         type: string
       schema:
         openAPIV3Schema:
@@ -1435,7 +1435,7 @@ spec:
           name: ExternalPort
           type: string
         - jsonPath: .spec.ipName
-          name: IpName
+          name: IPName
           type: string
         - jsonPath: .status.ready
           name: Ready
