--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1233,7 +1233,7 @@ spec:
                         type: string
                       ecmpMode:
                         type: string
-                      bfdId:
+                      bfdID:
                         type: string
                       routeTable:
                         type: string
