--- a/yamls/sa.yaml
+++ b/yamls/sa.yaml
@@ -11,6 +11,7 @@ metadata:
     rbac.authorization.k8s.io/system-only: "true"
   name: system:ovn-ovs
 rules:
+  # ovn-central liveness/readiness probe
   - apiGroups:
       - ""
     resources:
@@ -18,15 +19,15 @@ rules:
     verbs:
       - get
       - patch
+  # ovn-central liveness/readiness probe
   - apiGroups:
       - ""
-      - networking.k8s.io
-      - apps
     resources:
       - services
       - endpoints
     verbs:
       - get
+  # ovs-ovn start-ovs.sh
   - apiGroups:
       - apps
     resources:
@@ -105,7 +106,46 @@ rules:
       - qos-policies
       - qos-policies/status
     verbs:
-      - "*"
+      - get
+      - list
+      - watch
+      - patch
+      - update
+  - apiGroups:
+      - "kubeovn.io"
+    resources:
+      - vpcs
+      - vpc-nat-gateways
+      - subnets
+      - ips
+      - vips
+      - vlans
+      - provider-networks
+      - iptables-eips
+      - iptables-fip-rules
+      - ovn-eips
+      # VPC DNS
+      - switch-lb-rules
+    verbs:
+      - create
+  - apiGroups:
+      - "kubeovn.io"
+    resources:
+      # sync external VPC
+      - vpcs
+      # gc VPC
+      - vpc-nat-gateways
+      - ips
+      # gc VPC DNS
+      - switch-lb-rules
+      # delete Pod
+      - iptables-eips
+      # delete Pod
+      - iptables-fip-rules
+      # delete VPC or disable VPC external
+      - ovn-eips
+    verbs:
+      - delete
   - apiGroups:
       - ""
     resources:
@@ -115,7 +155,6 @@ rules:
       - nodes
       - configmaps
     verbs:
-      - create
       - get
       - list
       - watch
@@ -128,35 +167,26 @@ rules:
     verbs:
       - get
   - apiGroups:
-      - ""
       - networking.k8s.io
-      - apps
     resources:
       - networkpolicies
-      - daemonsets
     verbs:
       - get
       - list
       - watch
   - apiGroups:
       - ""
-      - apps
     resources:
       - services/status
     verbs:
       - update
   - apiGroups:
       - ""
-      - networking.k8s.io
-      - apps
-      - extensions
     resources:
       - services
       - endpoints
-      - statefulsets
-      - deployments
-      - deployments/scale
     verbs:
+      # switch LB rule needs create/delete/update
       - create
       - delete
       - update
@@ -164,6 +194,36 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - apps
+    resources:
+      - statefulsets
+      - deployments
+      - deployments/scale
+    verbs:
+      - update
+      - patch
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - apps
+    resources:
+      # VPC NAT gateway
+      - statefulsets
+      # LB Service
+      - deployments
+    verbs:
+      - create
+  - apiGroups:
+      - apps
+    resources:
+      # VPC NAT gateway
+      - statefulsets
+      # delete LB Service
+      - deployments
+    verbs:
+      - delete
   - apiGroups:
       - ""
     resources:
@@ -176,8 +236,15 @@ rules:
       - coordination.k8s.io
     resources:
       - leases
+    resourceNames:
+      - kube-ovn-controller
     verbs:
-      - "*"
+      - create
+      - delete
+      - update
+      - patch
+      - get
+      - watch
   - apiGroups:
       - "kubevirt.io"
     resources:
@@ -239,6 +306,13 @@ rules:
       - list
       - patch
       - watch
+  # external-gateway-config
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    verbs:
+      - get
   - apiGroups:
       - ""
     resources:
@@ -284,11 +358,11 @@ rules:
       - get
       - list
   - apiGroups:
-      - ""
-      - networking.k8s.io
       - apps
     resources:
       - daemonsets
+    resourceNames:
+      - kube-ovn-pinger
     verbs:
       - get
 ---
