--- a/charts/templates/ovn-CR.yaml
+++ b/charts/templates/ovn-CR.yaml
@@ -179,10 +179,15 @@ rules:
       - coordination.k8s.io
     resources:
       - leases
+    verbs:
+      - create
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
     resourceNames:
       - kube-ovn-controller
     verbs:
-      - create
       - delete
       - update
       - patch
