Add tolerations to pinger daemonSet to allow schedule on not ready nodes.
Signed-off-by: Amin Mohammadian <amin79mr@gmail.com>

--- a/charts/templates/pinger-ds.yaml
+++ b/charts/templates/pinger-ds.yaml
@@ -20,6 +20,13 @@ spec:
         type: infra
     spec:
       priorityClassName: system-node-critical
+      tolerations:
+        - effect: NoSchedule
+          operator: Exists
+        - effect: NoExecute
+          operator: Exists
+        - key: CriticalAddonsOnly
+          operator: Exists
       serviceAccountName: kube-ovn-app
       hostPID: true
       containers:
