--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -9,8 +9,8 @@ spec:
     singular: vpc-dns
     shortNames:
       - vpc-dns
-    kind: VpcDNS
-    listKind: VpcDNSList
+    kind: VpcDns
+    listKind: VpcDnsList
   scope: Cluster
   versions:
     - additionalPrinterColumns:
@@ -159,7 +159,7 @@ spec:
         - jsonPath: .spec.subnet
           name: Subnet
           type: string
-        - jsonPath: .spec.lanIP
+        - jsonPath: .spec.lanIp
           name: LanIP
           type: string
       name: v1
@@ -172,7 +172,7 @@ spec:
             spec:
               type: object
               properties:
-                lanIP:
+                lanIp:
                   type: string
                 subnet:
                   type: string
@@ -592,8 +592,8 @@ spec:
       - jsonPath: .status.v4ip
         name: V4ip
         type: string
-      - jsonPath: .spec.internalIP
-        name: InternalIP
+      - jsonPath: .spec.internalIp
+        name: InternalIp
         type: string
       - jsonPath: .status.v6ip
         name: V6ip
@@ -621,7 +621,7 @@ spec:
                   type: string
                 redo:
                   type: string
-                internalIP:
+                internalIp:
                   type: string
                 conditions:
                   type: array
@@ -645,7 +645,7 @@ spec:
               properties:
                 eip:
                   type: string
-                internalIP:
+                internalIp:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -681,8 +681,8 @@ spec:
       - jsonPath: .status.v6ip
         name: V6ip
         type: string
-      - jsonPath: .spec.internalIP
-        name: InternalIP
+      - jsonPath: .spec.internalIp
+        name: InternalIp
         type: string
       - jsonPath: .spec.externalPort
         name: ExternalPort
@@ -715,7 +715,7 @@ spec:
                   type: string
                 protocol:
                   type: string
-                internalIP:
+                internalIp:
                   type: string
                 internalPort:
                   type: string
@@ -747,7 +747,7 @@ spec:
                   type: string
                 protocol:
                   type: string
-                internalIP:
+                internalIp:
                   type: string
                 internalPort:
                   type: string
@@ -958,10 +958,10 @@ spec:
         name: Ready
         type: boolean
       - jsonPath: .spec.ipType
-        name: IPType
+        name: IpType
         type: string
       - jsonPath: .spec.ipName
-        name: IPName
+        name: IpName
         type: string
       schema:
         openAPIV3Schema:
@@ -1122,7 +1122,7 @@ spec:
           name: ExternalPort
           type: string
         - jsonPath: .spec.ipName
-          name: IPName
+          name: IpName
           type: string
         - jsonPath: .status.ready
           name: Ready
@@ -1233,7 +1233,7 @@ spec:
                         type: string
                       ecmpMode:
                         type: string
-                      bfdID:
+                      bfdId:
                         type: string
                       routeTable:
                         type: string
