--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -9,8 +9,8 @@ spec:
     singular: vpc-dns
     shortNames:
       - vpc-dns
-    kind: VpcDNS
-    listKind: VpcDNSList
+    kind: VpcDns
+    listKind: VpcDnsList
   scope: Cluster
   versions:
     - additionalPrinterColumns:
@@ -163,7 +163,7 @@ spec:
         - jsonPath: .spec.subnet
           name: Subnet
           type: string
-        - jsonPath: .spec.lanIP
+        - jsonPath: .spec.lanIp
           name: LanIP
           type: string
       name: v1
@@ -483,7 +483,7 @@ spec:
             spec:
               type: object
               properties:
-                lanIP:
+                lanIp:
                   type: string
                 subnet:
                   type: string
@@ -905,8 +905,8 @@ spec:
       - jsonPath: .status.v4ip
         name: V4ip
         type: string
-      - jsonPath: .spec.internalIP
-        name: InternalIP
+      - jsonPath: .spec.internalIp
+        name: InternalIp
         type: string
       - jsonPath: .status.v6ip
         name: V6ip
@@ -934,7 +934,7 @@ spec:
                   type: string
                 redo:
                   type: string
-                internalIP:
+                internalIp:
                   type: string
                 conditions:
                   type: array
@@ -958,7 +958,7 @@ spec:
               properties:
                 eip:
                   type: string
-                internalIP:
+                internalIp:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -994,8 +994,8 @@ spec:
       - jsonPath: .status.v6ip
         name: V6ip
         type: string
-      - jsonPath: .spec.internalIP
-        name: InternalIP
+      - jsonPath: .spec.internalIp
+        name: InternalIp
         type: string
       - jsonPath: .spec.externalPort
         name: ExternalPort
@@ -1028,7 +1028,7 @@ spec:
                   type: string
                 protocol:
                   type: string
-                internalIP:
+                internalIp:
                   type: string
                 internalPort:
                   type: string
@@ -1060,7 +1060,7 @@ spec:
                   type: string
                 protocol:
                   type: string
-                internalIP:
+                internalIp:
                   type: string
                 internalPort:
                   type: string
@@ -1271,10 +1271,10 @@ spec:
         name: Ready
         type: boolean
       - jsonPath: .spec.ipType
-        name: IPType
+        name: IpType
         type: string
       - jsonPath: .spec.ipName
-        name: IPName
+        name: IpName
         type: string
       schema:
         openAPIV3Schema:
@@ -1435,7 +1435,7 @@ spec:
           name: ExternalPort
           type: string
         - jsonPath: .spec.ipName
-          name: IPName
+          name: IpName
           type: string
         - jsonPath: .status.ready
           name: Ready
@@ -1546,7 +1546,7 @@ spec:
                         type: string
                       ecmpMode:
                         type: string
-                      bfdID:
+                      bfdId:
                         type: string
                     type: object
                   type: array
