--- a/.golangci.yml
+++ b/.golangci.yml
@@ -24,17 +24,17 @@ issues:
       text: "appendAssign"
     - linters:
         - revive
-      text: "underscore"
+      text: "underscore" # package name not change
     - path: test/unittest/
       linters:
         - revive
-      text: "dot imports"
+      text: "dot imports" # ginkgo coding style
     - linters:
         - revive
-      text: "VpcDns should be VpcDNS"
+      text: "VpcDns should be VpcDNS"  # api param not change
     - linters:
         - revive
-      text: "VpcDnsList should be VpcDNSList"
+      text: "VpcDnsList should be VpcDNSList" # api param not change
 
 linters-settings:
   goimports:
