--- a/yamls/ovn.yaml
+++ b/yamls/ovn.yaml
@@ -214,7 +214,7 @@ spec:
   updateStrategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: 100%
+      maxSurge: 1
       maxUnavailable: 0
   template:
     metadata:
