chart: fix ovs-ovn upgrade (#3164)
Signed-off-by: 张祖建 <zhangzujian.7@gmail.com>

--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -25,7 +25,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
         ip-family:
@@ -115,7 +114,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
         ip-family:
@@ -198,7 +196,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
         ip-family:
@@ -281,7 +278,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
         ip-family:
@@ -341,7 +337,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
         ip-family:
@@ -425,7 +420,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
     steps:
       - uses: actions/checkout@v3
@@ -547,7 +541,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
     steps:
       - uses: actions/checkout@v3
@@ -598,7 +591,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
     steps:
@@ -652,7 +644,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
     steps:
@@ -918,7 +909,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
     steps:
@@ -969,7 +959,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
           - release-1.8
     steps:
@@ -1057,7 +1046,6 @@ jobs:
         branch:
           - master
           - release-1.11
-          - release-1.10
           - release-1.9
         ssl:
           - "true"
@@ -1148,8 +1136,11 @@ jobs:
       matrix:
         case:
           - release-1.9 => release-1.11
+          - release-1.9 => release-1.12
           - release-1.9 => master
+          - release-1.11 => release-1.12
           - release-1.11 => master
+          - release-1.12 => master
     steps:
       - uses: actions/checkout@v3
       - uses: azure/setup-helm@v3
@@ -1211,7 +1202,7 @@ jobs:
         run: |
           sudo pip3 install j2cli
           sudo pip3 install "j2cli[yaml]"
-          sudo PATH=~/.local/bin:$PATH make kind-init
+          sudo PATH=~/.local/bin:$PATH make kind-init-ha
           sudo cp -r /root/.kube/ ~/.kube/
           sudo chown -R $(id -un). ~/.kube/
 
@@ -1227,16 +1218,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-
-          restart_ovs=false
-          v1=$(printf "$VERSION_FROM\\nrelease-1.11" | sort -Vr | head -n1)
-          v2=$(printf "$VERSION_TO\\nrelease-1.12" | sort -Vr | head -n1)
-          if [ $v1 = "release-1.11" ]; then
-            if [ $VERSION_TO = "master" -o $VERSION_TO = $v2 ]; then
-              restart_ovs=true
-            fi
-          fi
-          CHART_UPGRADE_RESTART_OVS=$restart_ovs VERSION=$version make kind-upgrade-chart
+          VERSION=$version make kind-upgrade-chart
 
       - name: Run E2E
         env:
