RBAC: fix clusterrole permissions
Signed-off-by: 张祖建 <zhangzujian.7@gmail.com>

--- a/charts/templates/ovn-CR.yaml
+++ b/charts/templates/ovn-CR.yaml
@@ -72,7 +72,6 @@ rules:
     verbs:
       - get
   - apiGroups:
-      - ""
       - networking.k8s.io
       - apps
     resources:
@@ -84,16 +83,13 @@ rules:
       - watch
   - apiGroups:
       - ""
-      - apps
     resources:
       - services/status
     verbs:
       - update
   - apiGroups:
       - ""
-      - networking.k8s.io
       - apps
-      - extensions
     resources:
       - services
       - endpoints
@@ -148,8 +144,6 @@ rules:
       - patch
   - apiGroups:
       - ""
-      - networking.k8s.io
-      - apps
     resources:
       - services
       - endpoints
@@ -196,6 +190,13 @@ rules:
       - list
       - patch
       - watch
+  # ovn-external-gw-config
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    verbs:
+      - get
   - apiGroups:
       - ""
     resources:
@@ -222,10 +223,10 @@ rules:
       - get
       - list
   - apiGroups:
-      - ""
-      - networking.k8s.io
       - apps
     resources:
       - daemonsets
+    resourceNames:
+      - kube-ovn-pinger
     verbs:
       - get
