--- a/yamls/sa.yaml
+++ b/yamls/sa.yaml
@@ -20,8 +20,6 @@ rules:
       - patch
   - apiGroups:
       - ""
-      - networking.k8s.io
-      - apps
     resources:
       - services
       - endpoints
@@ -128,7 +126,6 @@ rules:
     verbs:
       - get
   - apiGroups:
-      - ""
       - networking.k8s.io
       - apps
     resources:
@@ -140,16 +137,13 @@ rules:
       - watch
   - apiGroups:
       - ""
-      - apps
     resources:
       - services/status
     verbs:
       - update
   - apiGroups:
       - ""
-      - networking.k8s.io
       - apps
-      - extensions
     resources:
       - services
       - endpoints
@@ -239,6 +233,13 @@ rules:
       - list
       - patch
       - watch
+  # ovn-external-gw-config
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    verbs:
+      - get
   - apiGroups:
       - ""
     resources:
@@ -284,11 +285,11 @@ rules:
       - get
       - list
   - apiGroups:
-      - ""
-      - networking.k8s.io
       - apps
     resources:
       - daemonsets
+    resourceNames:
+      - kube-ovn-pinger
     verbs:
       - get
 ---
