--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -110,6 +110,9 @@ cni_conf:
 
 kubelet_conf:
   KUBELET_DIR: "/var/lib/kubelet"
+
+log_conf:
+  LOG_DIR: "/var/log"
   
 imagePullSecrets: []
 nameOverride: ""
