--- a/yamls/kube-ovn-ipv6.yaml
+++ b/yamls/kube-ovn-ipv6.yaml
@@ -130,7 +130,7 @@ spec:
             path: /etc/localtime
         - name: kube-ovn-log
           hostPath:
-            path: /var/log/kube-ovn
+            path: {{ .Values.log_conf.LOG_DIR }}/kube-ovn
         - name: kube-ovn-tls
           secret:
             optional: true
@@ -314,13 +314,13 @@ spec:
             path: /var/run/dbus
         - name: host-log-ovs
           hostPath:
-            path: /var/log/openvswitch
+            path: {{ .Values.log_conf.LOG_DIR }}/openvswitch
         - name: kube-ovn-log
           hostPath:
-            path: /var/log/kube-ovn
+            path: {{ .Values.log_conf.LOG_DIR }}/kube-ovn
         - name: host-log-ovn
           hostPath:
-            path: /var/log/ovn
+            path: {{ .Values.log_conf.LOG_DIR }}/ovn
         - name: localtime
           hostPath:
             path: /etc/localtime
@@ -432,13 +432,13 @@ spec:
             path: /etc/origin/openvswitch
         - name: host-log-ovs
           hostPath:
-            path: /var/log/openvswitch
+            path: {{ .Values.log_conf.LOG_DIR }}/openvswitch
         - name: kube-ovn-log
           hostPath:
-            path: /var/log/kube-ovn
+            path: {{ .Values.log_conf.LOG_DIR }}/kube-ovn
         - name: host-log-ovn
           hostPath:
-            path: /var/log/ovn
+            path: {{ .Values.log_conf.LOG_DIR }}/ovn
         - name: localtime
           hostPath:
             path: /etc/localtime
@@ -573,7 +573,7 @@ spec:
             path: /etc/origin/ovn
         - name: host-log-ovn
           hostPath:
-            path: /var/log/ovn
+            path: {{ .Values.log_conf.LOG_DIR }}/ovn
         - name: localtime
           hostPath:
             path: /etc/localtime
@@ -583,7 +583,7 @@ spec:
             secretName: kube-ovn-tls
         - name: kube-ovn-log
           hostPath:
-            path: /var/log/kube-ovn
+            path: {{ .Values.log_conf.LOG_DIR }}/kube-ovn
 ---
 kind: Service
 apiVersion: v1
