add multicast snoop for release-1.9

--- a/kubeovn-helm/templates/kube-ovn-crd.yaml
+++ b/kubeovn-helm/templates/kube-ovn-crd.yaml
@@ -436,6 +436,8 @@ spec:
                   type: string
                 u2oInterconnection:
                   type: boolean
+                enableMulticastSnoop:
+                  type: boolean
                 u2oInterconnectionIP:
                   type: string
   scope: Cluster
