--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ kwok-node.yaml
 broker-info.subm
 broker-info.subm.*
 broker-info-internal.subm
+yamls/clab-bgp.yaml
 kube-ovn.tar
 vpc-nat-gateway.tar
 image-amd64.tar
