crd for addExternalSubnets
Signed-off-by: zcq98 <zhaocongqi_yewu@cmss.chinamobile.com>

--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1222,6 +1222,10 @@ spec:
                   items:
                     type: string
                   type: array
+                addExternalSubnets:
+                  items:
+                    type: string
+                  type: array
                 staticRoutes:
                   items:
                     properties:
@@ -1294,6 +1298,10 @@ spec:
                 enableBfd:
                   type: boolean
                 subnets:
+                  items:
+                    type: string
+                  type: array
+                addExternalSubnets:
                   items:
                     type: string
                   type: array
