--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1535,6 +1535,10 @@ spec:
                   items:
                     type: string
                   type: array
+                addExternalSubnets:
+                  items:
+                    type: string
+                  type: array
                 staticRoutes:
                   items:
                     properties:
@@ -1605,6 +1609,10 @@ spec:
                 enableBfd:
                   type: boolean
                 subnets:
+                  items:
+                    type: string
+                  type: array
+                addExternalSubnets:
                   items:
                     type: string
                   type: array
