nat support specify vpc ip
Signed-off-by: bobz965 <zhangbingbing2_yewu@cmss.chinamobile.com>

--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -980,8 +980,6 @@ spec:
                   type: string
                 v4Ip:
                   type: string
-                macAddress:
-                  type: string
                 vpc:
                   type: string
                 conditions:
@@ -1009,6 +1007,10 @@ spec:
                 ipType:
                   type: string
                 ipName:
+                  type: string
+                vpc:
+                  type: string
+                v4Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -1038,7 +1040,10 @@ spec:
       - jsonPath: .status.v4Eip
         name: V4Eip
         type: string
-      - jsonPath: .status.v4ipCidr
+      - jsonPath: .status.v4IpCidr
+        name: V4IpCidr
+        type: string
+      - jsonPath: .status.v4Ip
         name: V4Ip
         type: string
       - jsonPath: .status.ready
@@ -1055,7 +1060,9 @@ spec:
                   type: boolean
                 v4Eip:
                   type: string
-                v4ipCidr:
+                v4IpCidr:
+                  type: string
+                v4Ip:
                   type: string
                 vpc:
                   type: string
@@ -1084,6 +1091,12 @@ spec:
                 vpcSubnet:
                   type: string
                 ipName:
+                  type: string
+                vpc:
+                  type: string
+                v4IpCidr:
+                  type: string
+                v4Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -1144,8 +1157,6 @@ spec:
                   type: string
                 v4Ip:
                   type: string
-                macAddress:
-                  type: string
                 vpc:
                   type: string
                 externalPort:
@@ -1187,6 +1198,10 @@ spec:
                 internalPort:
                   type: string
                 protocol:
+                  type: string
+                vpc:
+                  type: string
+                v4Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
