--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1293,8 +1293,6 @@ spec:
                   type: string
                 v4Ip:
                   type: string
-                macAddress:
-                  type: string
                 vpc:
                   type: string
                 conditions:
@@ -1322,6 +1320,10 @@ spec:
                 ipType:
                   type: string
                 ipName:
+                  type: string
+                vpc:
+                  type: string
+                v4Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -1351,7 +1353,10 @@ spec:
       - jsonPath: .status.v4Eip
         name: V4Eip
         type: string
-      - jsonPath: .status.v4ipCidr
+      - jsonPath: .status.v4IpCidr
+        name: V4IpCidr
+        type: string
+      - jsonPath: .status.v4Ip
         name: V4Ip
         type: string
       - jsonPath: .status.ready
@@ -1368,7 +1373,9 @@ spec:
                   type: boolean
                 v4Eip:
                   type: string
-                v4ipCidr:
+                v4IpCidr:
+                  type: string
+                v4Ip:
                   type: string
                 vpc:
                   type: string
@@ -1397,6 +1404,12 @@ spec:
                 vpcSubnet:
                   type: string
                 ipName:
+                  type: string
+                vpc:
+                  type: string
+                v4IpCidr:
+                  type: string
+                v4Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -1457,8 +1470,6 @@ spec:
                   type: string
                 v4Ip:
                   type: string
-                macAddress:
-                  type: string
                 vpc:
                   type: string
                 externalPort:
@@ -1500,6 +1511,10 @@ spec:
                 internalPort:
                   type: string
                 protocol:
+                  type: string
+                vpc:
+                  type: string
+                v4Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
