--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1535,7 +1535,7 @@ spec:
                   items:
                     type: string
                   type: array
-                addExternalSubnets:
+                extraExternalSubnets:
                   items:
                     type: string
                   type: array
@@ -1612,7 +1612,7 @@ spec:
                   items:
                     type: string
                   type: array
-                addExternalSubnets:
+                extraExternalSubnets:
                   items:
                     type: string
                   type: array
