--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1222,7 +1222,7 @@ spec:
                   items:
                     type: string
                   type: array
-                addExternalSubnets:
+                extraExternalSubnets:
                   items:
                     type: string
                   type: array
@@ -1301,7 +1301,7 @@ spec:
                   items:
                     type: string
                   type: array
-                addExternalSubnets:
+                extraExternalSubnets:
                   items:
                     type: string
                   type: array
