support vpc configuration of multiple external network segments through label and crd (#3264)
* add externalSubnet field support for vpc

* custom vpc get chassis from node label

* custom vpc add external based on ExternalSubnets

* support externalsubnets update

* compatible with default external

* fix custom vpc default external localnet create

* update addExternalSubnets status

* crd for addExternalSubnets

* add additionalPrinterColumn extraExternalSubnets


---------

Signed-off-by: zcq98 <zhaocongqi_yewu@cmss.chinamobile.com>

--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1209,6 +1209,9 @@ spec:
         - jsonPath: .status.subnets
           name: Subnets
           type: string
+        - jsonPath: .status.extraExternalSubnets
+          name: ExtraExternalSubnets
+          type: string
         - jsonPath: .spec.namespaces
           name: Namespaces
           type: string
@@ -1223,6 +1226,10 @@ spec:
                 enableBfd:
                   type: boolean
                 namespaces:
+                  items:
+                    type: string
+                  type: array
+                extraExternalSubnets:
                   items:
                     type: string
                   type: array
@@ -1298,6 +1305,10 @@ spec:
                 enableBfd:
                   type: boolean
                 subnets:
+                  items:
+                    type: string
+                  type: array
+                extraExternalSubnets:
                   items:
                     type: string
                   type: array
