--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1522,6 +1522,9 @@ spec:
         - jsonPath: .status.subnets
           name: Subnets
           type: string
+        - jsonPath: .status.extraExternalSubnets
+          name: ExtraExternalSubnets
+          type: string
         - jsonPath: .spec.namespaces
           name: Namespaces
           type: string
@@ -1536,6 +1539,10 @@ spec:
                 enableBfd:
                   type: boolean
                 namespaces:
+                  items:
+                    type: string
+                  type: array
+                extraExternalSubnets:
                   items:
                     type: string
                   type: array
@@ -1609,6 +1616,10 @@ spec:
                 enableBfd:
                   type: boolean
                 subnets:
+                  items:
+                    type: string
+                  type: array
+                extraExternalSubnets:
                   items:
                     type: string
                   type: array
