Allow same subnet traffic
Signed-off-by: yuanliu <yuanliu_yewu@cmss.chinamobile.com>

--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1712,6 +1712,8 @@ spec:
                   type: boolean
                 ipv6RAConfigs:
                   type: string
+                allowSameSubnetTraffic:
+                  type: string
                 acls:
                   type: array
                   items:
