--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1113,6 +1113,9 @@ spec:
       subresources:
         status: {}
       additionalPrinterColumns:
+        - jsonPath: .status.vpc
+          name: Vpc
+          type: string
         - jsonPath: .spec.ovnEip
           name: Eip
           type: string
