--- a/yamls/ovn-dpdk.yaml
+++ b/yamls/ovn-dpdk.yaml
@@ -238,6 +238,8 @@ spec:
               value: "5"
             - name: OVN_NORTHD_N_THREADS
               value: "1"
+            - name: ENABLE_COMPACT
+              value: "true"
           resources:
             requests:
               cpu: 500m
