--- a/yamls/ovn-ha.yaml
+++ b/yamls/ovn-ha.yaml
@@ -129,6 +129,8 @@ spec:
               value: "5"
             - name: OVN_NORTHD_N_THREADS
               value: "1"
+            - name: ENABLE_COMPACT
+              value: "true"
           resources:
             requests:
               cpu: 300m
