--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -52,6 +52,7 @@ networking:
   OVN_REMOTE_PROBE_INTERVAL: 10000
   OVN_REMOTE_OPENFLOW_INTERVAL: 180
   OVN_NORTHD_N_THREADS: 1
+  ENABLE_COMPACT: true
 
 func:
   ENABLE_LB: true
