--- a/yamls/ovn-ha.yaml
+++ b/yamls/ovn-ha.yaml
@@ -130,7 +130,7 @@ spec:
             - name: OVN_NORTHD_N_THREADS
               value: "1"
             - name: ENABLE_COMPACT
-              value: "true"
+              value: "false"
           resources:
             requests:
               cpu: 300m
